<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Расписание СГХТ</string>
    <string name="settings">Настройки</string>
    <string name="select_options">Выберите параметры</string>
    <string name="settings_teacher_name">Преподаватель</string>
    <string name="settings_teacher_change_name">Выберите своё ФИО</string>
    <string name="apply">Применить</string>
    <string name="groupName">Группа</string>
    <string name="groupIndex">-1</string>
    <string name="teacherName">Фамилия И.О.</string>
    <string name="teacherIndex">-1</string>
    <string name="nope">Похоже вы здесь впервые. Перейдите в настройки.</string>
    <string name="alas">Увы... Здесь ничего нет.</string>

    <string name="errorMessage">При загрузке данных произошла ошибка.\nПроверьте Ваше подключение к сети</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">ВС</string>

    <string name="expDate">22 Февр. 2021</string>
    <string name="expNumPair">#1</string>
    <string name="expTime">11:55 – 12:45</string>
    <string name="expTimeBreak">Перерыв, 30 минут</string>
    <string name="expGroup">ПКС</string>
    <string name="expTeacher">Никишина Е.В.</string>
    <string name="expDiscipline">Основы программирования</string>
    <string name="expAuditorium">201</string>
    <string name="expSubGroup">Лабораторная работа</string>

    <string name="studentSubGroup_1">Лабораторная работа</string>
    <string name="studentSubGroup_2">Лабораторная работа</string>
    <string name="studentSubGroup_3">Лекция</string>
    <string name="studentSubGroup_4">Немецкий язык</string>
    <string name="studentSubGroup_5">Английский язык</string>

    <string name="teacherSubGroup_1">Первая подгруппа</string>
    <string name="teacherSubGroup_2">Вторая подгруппа</string>
    <string name="teacherSubGroup_3">Общая пара</string>
    <string name="teacherSubGroup_4">Немецкий язык</string>
    <string name="teacherSubGroup_5">Английский язык</string>

    <string name="dateMonday" tools:ignore="TypographyDashes">2021-02-15</string>
    <string name="dateTuesday" tools:ignore="TypographyDashes">2021-02-16</string>
    <string name="dateWednesday" tools:ignore="TypographyDashes">2021-02-17</string>
    <string name="dateThursday" tools:ignore="TypographyDashes">2021-02-18</string>
    <string name="dateFriday" tools:ignore="TypographyDashes">2021-02-19</string>
    <string name="dateSaturday" tools:ignore="TypographyDashes">2021-02-20</string>

    <string-array name="listCourseStudy">
        <item>Курс</item>
        <item>Первый</item>
        <item>Второй</item>
        <item>Третий</item>
        <item>Четвертый</item>
    </string-array>

    <string-array name="listSubGroup">
        <item>Подгруппа</item>
        <item>Первая подгруппа</item>
        <item>Вторая подгруппа</item>
    </string-array>

    <string-array name="listSubGroupIndex">
        <item>-1</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="listEngOrGer">
        <item>Иностранная группа</item>
        <item>Английская группа</item>
        <item>Немецкая группа</item>
    </string-array>

    <string-array name="listEngOrGerIndex">
        <item>-1</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>