<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:weightSum="100"
    android:background="@color/background"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/black4"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />

            <Button
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/streak"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/expTime"
                android:textSize="16sp"
                android:textColor="@color/black4"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:background="@color/background_2"
                android:layout_marginStart="10dp">

                <Button
                    android:id="@+id/stick"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/txtSubGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="left"
                            android:text="@string/expSubGroup"
                            android:textColor="@color/black4"
                            android:textSize="16sp"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/txtNumPair"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:layout_marginRight="15dp"
                            android:text="@string/expNumPair"
                            android:textColor="@color/black4"
                            android:textSize="16sp"
                            tools:ignore="RtlHardcoded" />

                    </FrameLayout>

                    <TextView
                        android:id="@+id/txtDiscipline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/expDiscipline"
                        android:textSize="18sp"
                        android:textColor="@color/black4"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp">

                        <TextView
                            android:id="@+id/txtTeacher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/expTeacher"
                            android:textSize="16sp"
                            android:textColor="@color/black4"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/txtAudit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginRight="15dp"
                            android:text="@string/expAuditorium"
                            android:textSize="16sp"
                            android:textColor="@color/black4"
                            tools:ignore="RtlHardcoded" />

                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

    <!--

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="90"
        android:gravity="top">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left">

            <Button
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/black4"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <Button
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/streak"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="11:35 - 12:45"
                android:textSize="16sp"/>

        </FrameLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtNumPair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtAudit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtSubGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"/>

</LinearLayout> -->